# mc-building-gen

./: .gitignore  LICENSE  main.py  pyproject.toml  vocabs.py
config/: overfit.ini
config/checkpoint/: overfit.ini
config/data/: overfit.ini
config/parameter/: overfit.ini
config/training/: overfit.ini
data/state/: __init__.py  block_state.py  helpers.py  stairs.py
src/: cli.py  config.py  main.py
src/data/: __init__.py  building.py  chunk.py  decode.py  state.py  structure.py  vocabs.py
src/data/state/: __init__.py  helpers.py  stairs.py
src/model/: __init__.py
src/model/chunk/: __init__.py  chunk_decoder.py  chunk_encoder.py  chunk_vae.py  loss.py
src/train/: __init__.py  vae.py
src/training/: __init__.py  vae.py
vocabs/: basic.json
