[project]
name = "mc-build-gen"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "einops>=0.8.1",
    "fastapi>=0.123.9",
    "numpy>=2.3.5",
    "rich>=14.2.0",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.35.0",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.format]
quote-style = "single"

[tool.basedpyright]
executionEnvironments = [
    { root = "src" }
]
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportAttributeAccessIssue = "none"
reportUnusedCallResult = "none"
reportExplicitAny = "none"
reportAny = "none"
